fix fixed overlapping

--- a/resources/sass/_multiselect.scss
+++ b/resources/sass/_multiselect.scss
@@ -1,4 +1,4 @@
-.multiselect {
+.multiselect--active {
     z-index: 3;
 }
 
